# cpp_component

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  list.cpp  logger.cpp  mm.cpp
src/fix_length_list/: fix_length_list.hpp
src/logger/: logger.hpp
src/memory_manager/: README.md  memory_manager.hpp
tests/: CMakeLists.txt  memory_manager.cpp
